# lightrag-mcp-connect

./: .gitignore  AGENTS.md  BACKLOG.md  PLAN.md  PROJECT.md  README.es.md  README.md  README.ru.md  ROADMAP.md  SPEC.md  STATUS.md  TECH_STACK.md  pyproject.toml  test_client_workspace.py  test_workspace.py
deploy/: .env.example  Caddyfile  docker-compose.full-example.yml  docker-compose.gateway.yml  docker-compose.simple.yml  docker-compose.traefik.yml  docker-compose.yml
deploy/mcp-gw/: Dockerfile
gateway/: Dockerfile  README.md  pyproject.toml
gateway/app/: __init__.py  app.py  cli.py  manager.py  registry.py
gateway/tests/: test_admin_auth.py  test_registry.py  test_registry_postgres.py
mcp/: Dockerfile
mcp/app/: __init__.py  cli.py  client.py  instructions.example.md  instructions.py  models.py  server.py  tool_handlers.py
mcp/app/instructions/: remote-admin__mcp-instructions.md  remote-user__mcp-instructions.md  stdio-admin__mcp-instructions.md  stdio-user__mcp-instructions.md
services/workspace-gateway/: Dockerfile  README.md  pyproject.toml
services/workspace-gateway/src/lightrag_workspace_gateway/: app.py  cli.py  registry.py
services/workspace-gateway/tests/: test_registry.py  test_registry_postgres.py
src/daniel_lightrag_mcp/: client.py  server.py
src/lightrag_mcp_connect/: __init__.py  __main__.py  client.py  content_store.py  instructions.example.md  models.py  server.py  tool_handlers.py
src/lightrag_mcp_remote/: __main__.py  client.py  server.py
tests/: __init__.py  conftest.py  test_client.py  test_dispatcher_and_mutations.py  test_gateway_integration.py  test_integration.py  test_models.py  test_runner.py  test_security_and_contracts.py  test_server.py
