[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightrag-workspace-gateway"
version = "2.0.0"
description = "Dynamic workspace registry and reverse proxy for LightRAG"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.30,<1",
  "fastapi>=0.115,<1",
  "httpx>=0.28,<1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "black>=25,<26",
  "mypy>=1.15,<2",
  "pytest>=8,<9",
  "pytest-asyncio>=0.25,<1",
]

[project.scripts]
lightrag-workspace-gateway = "lightrag_workspace_gateway.app:main"
lightrag-workspace = "lightrag_workspace_gateway.cli:main"

[tool.setuptools]
packages = ["lightrag_workspace_gateway"]

[tool.setuptools.package-dir]
"lightrag_workspace_gateway" = "app"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "asyncpg"
ignore_missing_imports = true
